after actually saving it

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,17 +2,19 @@ Package: morrowplots
 Title: Historical Agricultural Data of the University of Illinois
 Version: 0.0.0.9000
 Authors@R: c(
+   	person("Sandi", "Caldrone", email = "caldron2@illinois.edu", 
+   	role = c("cre","aut"), comment = c(ORCID = "0000-0001-6392-5279")), 
     person("Heidi", "Imker", email = "imker@illinois.edu", role = "aut", 
     comment = c(ORCID = "0000-0003-4748-7453")),
-	person("Sandi", "Caldron", email = "caldron2@illinois.edu", role = c("cre","aut"), 
-	comment = c(ORCID = "0000-0001-6392-5279")),
-	person("Josh", "Henry", email = "jkhenry@illionis.edu", role = "aut", 
-	comment = c(ORCID = "0000-0002-7826-5960")),
+	  person("Josh", "Henry", email = "jkhenry@illionis.edu", role = "aut", 
+	  comment = c(ORCID = "0000-0002-7826-5960")),
     person("Brooke", "Anderson", 
     email = "brooke.anderson@colostate.edu", role = "ctb"))
-Description: The dataset compiled to include planting, treatment and yield data 
-    recorded for the three enduring plots (3, 4 and 5) starting in 1888. Not all 
-    variables were recorded for all years of the experiment. Missing values are 
+Description: The Morrow Plots dataset compiled from available primary and 
+    secondary sources includes planting, treatment, and yield data recorded for
+    the plots numbered (3,4,5) which are the three plots that remain from the 
+    original 1876 experiment. The dataset contains records from the years 
+    1888-2021. Not all variables were recorded for all years. Missing values are
     represented with NA.
 License: MIT + file LICENSE
 Encoding: UTF-8
@@ -25,4 +27,4 @@ Suggests:
     knitr,
     rmarkdown
 VignetteBuilder: knitr
-URL: https://1heidi.github.io/morrowplots/
+URL: https://sandical.github.io/morrowplots/
