--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,5 +26,6 @@ LazyData: true
 Suggests: 
     knitr,
     rmarkdown
+    tidyverse
 VignetteBuilder: knitr
 URL: https://sandical.github.io/morrowplots/
