--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,8 +24,9 @@ Depends:
     R (>= 2.10)
 LazyData: true
 Suggests: 
+    dplyr,
+    ggplot2,
     knitr,
     rmarkdown
-    tidyverse
 VignetteBuilder: knitr
 URL: https://sandical.github.io/morrowplots/
